teacher module and courses
modules are finished: teachers and courses (views only)

--- a/styles/main_styles.css
+++ b/styles/main_styles.css
@@ -808,7 +808,7 @@ section
 }
 .svg path
 {
-	fill: #ffb606;
+	fill: #6696ff;
 }
 .hero_box svg
 {
@@ -879,7 +879,7 @@ section
 	width: 55px;
 	height: 4px;
 	content: '';
-	background: #ffb606;
+	background: #6696ff;
 }
 
 /*********************************
@@ -1220,7 +1220,7 @@ input:last-of-type
 .quote
 {
 	font-size: 36px;
-	color: #ffb606;
+	color: #6696ff;
 }
 .testimonials_text
 {
@@ -1248,7 +1248,7 @@ input:last-of-type
 	font-size: 16px;
 	font-weight: 700;
 	text-transform: uppercase;
-	color: #f6af03;
+	color: #6696ff;
 	margin-top: 21px;
 }
 .testimonial_title
@@ -1281,7 +1281,7 @@ input:last-of-type
 	width: 16px !important;
 	height: 16px !important;
 	border: none;
-	background: #ffb606 !important;
+	background: #6696ff !important;
 }
 
 /*********************************
@@ -1304,14 +1304,14 @@ input:last-of-type
 {
 	width: 131px;
 	height: 131px;
-	border: solid 2px #ffb606;
+	border: solid 2px #6696ff;
 	margin-bottom: 18px;
 }
 .event_day
 {
 	font-size: 48px;
 	font-weight: 700;
-	color: #ffb606;
+	color: #6696ff;
 	margin-bottom: 1px;
 	line-height: 1;
 }
@@ -1319,7 +1319,7 @@ input:last-of-type
 {
 	font-size: 16px;
 	font-weight: 700;
-	color: #ffb606;
+	color: #6696ff;
 }
 .event_name a
 {
@@ -1329,7 +1329,7 @@ input:last-of-type
 }
 .event_name a:hover
 {
-	color: #ffb606;
+	color: #6696ff;
 }
 .event_location
 {
@@ -1394,14 +1394,14 @@ input:last-of-type
 }
 .newsletter_email:focus
 {
-	outline: solid 2px #ffb606;
+	outline: solid 2px #6696ff;
 }
 .newsletter_submit_btn
 {
 	width: 164px;
 	height: 42px;
 	border: none;
-	background: #ffb606;
+	background: #6696ff;
 	color: #FFFFFF;
 	font-size: 14px;
 	font-weight: 500;
@@ -1463,7 +1463,7 @@ input:last-of-type
 }
 .footer_list_item a:hover
 {
-	color: #ffb606;
+	color: #6696ff;
 }
 .footer_contact_item
 {
@@ -1504,7 +1504,7 @@ input:last-of-type
 }
 .footer_social .menu_social_item a i:hover
 {
-	color: #ffb606;
+	color: #6696ff;
 }
 .footer_social .menu_social_item:last-child
 {
